--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -727,14 +727,15 @@
   "locationText": "Location",
   "logoutText": "Log out",
   "mainMenu": {
-    "Manage": "Manage",
+    "Manage": "Manage USD",
+    "CropReceipts": "Crop Receipts",
     "About": "About",
     "AssetOwnerContainer": "@:pageTitle.AssetOwner",
     "Bridge": "@:bridgeText",
     "Burn": "@:pageTitle.Burn",
     "Explore/Container": "Explore",
     "Farming": "Farming",
-    "OrderBook": "Trade",
+    "OrderBook": "Coupons",
     "Pool": "Pool",
     "Rewards": "Rewards",
     "SoraCard": "{Sora} Card",
